--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.13",
     "react": "^19.0.0",
+    "react-datepicker": "^8.2.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.13"
+    "tailwindcss": "^4.0.13",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
